# go-haskell

./: .gitignore  ChangeLog.md  README.md  conanfile.py  conanfile.txt  go-haskell.cabal  hardcopy.1
.github/workflows/: build.yml
docker/go-haskell/: Dockerfile
docker/rest-server/: Dockerfile
docker/socket-server/: Dockerfile
infrastructure/: .gitignore  README.md  package.json
infrastructure/src/: main.ts
infrastructure/src/google-stack/: google-backend-stack.ts  google-stack.ts
infrastructure/src/services/: go-game-socket-server.ts
scripts/: build.sh
src/: Board.hs  CLI.hs  Command.hs  Cursor.hs  Game.hs  Location.hs  Main.hs  Player.hs  Position.hs  Render.hs  Stone.hs  UserInput.hs  main.hs
src/API/: JSON.hs
src/API/JSON/: Client.hs
src/API/JSON/Input/: Color.hs  Command.hs  DTO.hs  Game.hs  Intersection.hs  Location.hs  Settings.hs  State.hs
src/API/JSON/Output/: Color.hs  DTO.hs  EndGame.hs  Game.hs  Intersection.hs  Location.hs  Settings.hs  State.hs
src/API/REST/: Controller.hs  Server.hs  Service.hs  Utils.hs
src/API/REST/Game/: Controller.hs  Service.hs
src/API/REST/Game/Input/: CreateGameDTO.hs
src/API/REST/Input/: CreateGameDTO.hs
src/API/REST/Output/: GameDTO.hs
src/API/WebSocket/: Controller.hs  Server.hs  Service.hs
src/API/WebSocket/Input/: Command.hs  CommandDTO.hs  CreateCommandDTO.hs  CreateDTO.hs  CreateGameDTO.hs  Data.hs  PassCommandDTO.hs  PassDTO.hs  PlayCommandDTO.hs  PlayDTO.hs  PlayGameDTO.hs  PlayStoneDTO.hs
src/API/WebSocket/Output/: PassDTO.hs
src/CLI/: Client.hs  Command.hs  Cursor.hs  Render.hs  UserInput.hs
src/Go/: Board.hs  Color.hs  Game.hs  Intersection.hs  Location.hs  Player.hs  Positions.hs  Settings.hs
src/UserInterface/: Command.hs  Cursor.hs  Render.hs  UserInput.hs
tests/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  go_haskell_rest_api_test.cpp  go_haskell_socket_api_test.cpp  go_json_api_test.cpp  tests.cpp
tests/rules/: rule10_test.cpp  rule1_test.cpp  rule2_test.cpp  rule3_test.cpp  rule4_test.cpp  rule5_test.cpp  rule6_test.cpp  rule7_test.cpp  rule7a_test.cpp  rule8_test.cpp  rule9_test.cpp
tests/utils/: board.cpp  board.h  go_json_api.cpp  go_json_api.h  json_api.cpp  json_api.h  rest_api.cpp  rest_api.h  socket_api.cpp  socket_api.h
