name:                go-haskell
version:             0.0.0.1
synopsis:            Go CI Game
description:         Go implemented as CI Game.
license:             BSD3
license-file:        LICENSE
author:              Alexander Sattelmaier
maintainer:          alexander@sattelmaier.info
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable go-haskell
  main-is:             Main.hs
  other-modules:
    Go.Game
    Go.Board
    Go.Intersection
    CLI
    CLI.Command
    CLI.Cursor
    CLI.Render
    CLI.UserInput
    API.JSON
    API.JSON.Input.DTO
    API.JSON.Input.Command
    API.JSON.Input.Game
    API.JSON.Input.Intersection
    API.JSON.Input.Location
    API.JSON.Input.State
    API.JSON.Input.Color
    API.JSON.Output.DTO
    API.JSON.Output.Game
    API.JSON.Output.Intersection
    API.JSON.Output.Location
    API.JSON.Output.State
    API.JSON.Output.Color
  build-depends:
    base               >=4.11 && <4.12,
    process            == 1.*,
    aeson              == 1.*,
    bytestring         >= 0.10.4.0 && < 0.12,
    text               >= 1.2.3.0 && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing

source-repository head
  type:     git
  location: git://github.com/asattelmaier/go-haskell.git

