cabal-version:       2.4
name:                go-haskell
version:             0.0.0.1
synopsis:            Go CI Game
description:         Go implemented as CI Game.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alexander Sattelmaier
maintainer:          alexander@sattelmaier.info
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

executable go-haskell
  main-is:             Main.hs
  other-modules:
    Go.Game
    Go.Board
    Go.Intersection
    
    CLI
    CLI.Command
    CLI.Cursor
    CLI.Render
    CLI.UserInput
   
    API.JSON
    API.JSON.Input.DTO
    API.JSON.Input.Command
    API.JSON.Input.Game
    API.JSON.Input.Intersection
    API.JSON.Input.Location
    API.JSON.Input.State
    API.JSON.Input.Color
    API.JSON.Output.DTO
    API.JSON.Output.Game
    API.JSON.Output.Intersection
    API.JSON.Output.Location
    API.JSON.Output.State
    API.JSON.Output.Color

    API.REST.Server
    API.REST.Utils
    API.REST.Controller
    API.REST.Service
    API.REST.Input.CreateGameDTO
    API.REST.Output.GameDTO

    API.WebSocket.Server
  build-depends:
    base               ^>=4.14.1.0,
    process            == 1.*,

    -- JSON API Dependencies
    aeson              == 1.*,
    bytestring         >= 0.10.4.0 && < 0.12,
    text               >= 1.2.3.0  && < 1.3,

    -- REST API Dependencies
    snap               >= 1.0      && < 1.2,
    snap-core          >= 1.0      && < 1.1,
    snap-server        >= 1.0      && < 1.2,
    snap-loader-static >= 1.0      && < 1.2,
    lens               >= 4.8      && < 4.19.2,
    map-syntax         >= 0.2      && < 0.4,
    heist              >= 1.0      && < 1.2,

    -- WebSocket API Dependencies
    websockets         >= 0.12     && < 0.12.7.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing

source-repository head
  type:     git
  location: git://github.com/asattelmaier/go-haskell.git

