cabal-version:       3.0
name:                go-haskell
version:             0.0.0.1
synopsis:            Go CI Game
description:         Go implemented as CI Game.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alexander Sattelmaier
maintainer:          alexander@sattelmaier.info
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

executable go-haskell
  main-is:             Main.hs
  other-modules:
    Go.Game
    Go.Settings
    Go.Player
    Go.Positions
    Go.Board
    Go.Intersection
    Go.Location
    Go.Color
    
    CLI.Client
    CLI.Command
    CLI.Cursor
    CLI.Render
    CLI.UserInput
   
    API.JSON.Client
    API.JSON.Input.DTO
    API.JSON.Input.Command
    API.JSON.Input.Game
    API.JSON.Input.Settings
    API.JSON.Input.Intersection
    API.JSON.Input.Location
    API.JSON.Input.State
    API.JSON.Input.Color
    API.JSON.Output.DTO
    API.JSON.Output.Game
    API.JSON.Output.Settings
    API.JSON.Output.Intersection
    API.JSON.Output.Location
    API.JSON.Output.State
    API.JSON.Output.Color
    API.JSON.Output.EndGame

    API.REST.Server
    API.REST.Utils
    API.REST.Controller
    API.REST.Service
    API.REST.Input.CreateGameDTO
    API.REST.Output.GameDTO

    API.WebSocket.Server
    API.WebSocket.Controller
    API.WebSocket.Service
    API.WebSocket.Input.Data
    API.WebSocket.Input.CreateDTO
    API.WebSocket.Input.CreateCommandDTO
    API.WebSocket.Input.PlayDTO
    API.WebSocket.Input.PlayCommandDTO
    API.WebSocket.Input.PassDTO
    API.WebSocket.Input.PassCommandDTO
    API.WebSocket.Input.CommandDTO
    API.WebSocket.Output.PassDTO
  build-depends:
    base               ^>=4.18.2.0,
    process            ^>=1.6,

    -- JSON API Dependencies
    aeson              ^>=2.2,
    bytestring         ^>=0.11,
    text               ^>=2.0,

    -- REST API Dependencies
    snap               ^>=1.1,
    snap-core          ^>=1.0,
    snap-server        ^>=1.1,
    snap-loader-static ^>=1.0,
    lens               ^>=5.2,
    map-syntax         ^>=0.3,
    heist              ^>=1.1,

    -- WebSocket API Dependencies
    websockets         ^>=0.12,
    websockets-snap    ^>=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing

source-repository head
  type:     git
  location: git://github.com/asattelmaier/go-haskell.git

